--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Lachlan Kain</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+<header class="header">
+  <div class="header-left">
+    <a href="index.html" class="logo">Lachlan Kain</a>
+  </div>
+  <div class="header-right">
+    <a href="index.html">Work</a>
+    <a href="info.html">Info</a>
+    <a href="#" class="insta">⌾</a>
+  </div>
+</header>
+
+<main class="portfolio">
+
+  <div class="project">
+    <div class="project-title">Project 01</div>
+    <a href="project.html">
+      <img src="images/test.jpg" alt="">
+    </a>
+  </div>
+
+  <div class="project">
+    <div class="project-title">Project 02</div>
+    <a href="project.html">
+      <img src="images/test.jpg" alt="">
+    </a>
+  </div>
+
+  <div class="project">
+    <div class="project-title">Project 03</div>
+    <a href="project.html">
+      <img src="images/test.jpg" alt="">
+    </a>
+  </div>
+
+  <div class="project">
+    <div class="project-title">Project 04</div>
+    <a href="project.html">
+      <img src="images/test.jpg" alt="">
+    </a>
+  </div>
+
+</main>
+
+</body>
+</html>
