--- a/index.html
+++ b/index.html
@@ -1,54 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Lachlan Kain</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lachlan Kain</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="logo">Lachlan Kain</div>
+        <nav>
+            <a href="#" class="nav-link">Work</a>
+            <a href="#" class="nav-link">Info</a>
+            <a href="#" class="instagram">IG</a>
+        </nav>
+    </header>
 
-<header class="header">
-  <div class="header-left">
-    <a href="index.html" class="logo">Lachlan Kain</a>
-  </div>
-  <div class="header-right">
-    <a href="index.html">Work</a>
-    <a href="info.html">Info</a>
-    <a href="#" class="insta">⌾</a>
-  </div>
-</header>
+    <main>
+        <div class="portfolio">
+            <div class="project">
+                <img src="test1.jpg" alt="Test 1">
+                <div class="project-name">Test 1</div>
+            </div>
+            <div class="project">
+                <img src="test2.jpg" alt="Test 2">
+                <div class="project-name">Test 2</div>
+            </div>
+            <div class="project">
+                <img src="test3.jpg" alt="Test 3">
+                <div class="project-name">Test 3</div>
+            </div>
+            <div class="project">
+                <img src="test4.jpg" alt="Test 4">
+                <div class="project-name">Test 4</div>
+            </div>
+        </div>
+    </main>
 
-<main class="portfolio">
-
-  <div class="project">
-    <div class="project-title">Project 01</div>
-    <a href="project.html">
-      <img src="images/test.jpg" alt="">
-    </a>
-  </div>
-
-  <div class="project">
-    <div class="project-title">Project 02</div>
-    <a href="project.html">
-      <img src="images/test.jpg" alt="">
-    </a>
-  </div>
-
-  <div class="project">
-    <div class="project-title">Project 03</div>
-    <a href="project.html">
-      <img src="images/test.jpg" alt="">
-    </a>
-  </div>
-
-  <div class="project">
-    <div class="project-title">Project 04</div>
-    <a href="project.html">
-      <img src="images/test.jpg" alt="">
-    </a>
-  </div>
-
-</main>
-
+    <script src="script.js"></script>
 </body>
 </html>
