--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>Lachlan Kain</title>
+
+  <!-- Inter font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -26,46 +32,35 @@
 
     <div class="row">
       <div class="project">
-        <div class="project-title">Test Project 1</div>
+        <div class="project-meta">
+          <span class="project-number">001</span>
+          <span class="project-name">Test Project One</span>
+        </div>
         <img src="images/test1.jpg" alt="Test 1">
       </div>
 
       <div class="project">
-        <div class="project-title">Test Project 2</div>
+        <div class="project-meta">
+          <span class="project-number">002</span>
+          <span class="project-name">Test Project Two</span>
+        </div>
         <img src="images/test2.jpg" alt="Test 2">
       </div>
 
       <div class="project">
-        <div class="project-title">Test Project 3</div>
+        <div class="project-meta">
+          <span class="project-number">003</span>
+          <span class="project-name">Test Project Three</span>
+        </div>
         <img src="images/test3.jpg" alt="Test 3">
       </div>
 
       <div class="project">
-        <div class="project-title">Test Project 4</div>
+        <div class="project-meta">
+          <span class="project-number">004</span>
+          <span class="project-name">Test Project Four</span>
+        </div>
         <img src="images/test4.jpg" alt="Test 4">
-      </div>
-    </div>
-
-    <!-- Example second row -->
-    <div class="row">
-      <div class="project">
-        <div class="project-title">Test Project 5</div>
-        <img src="images/test1.jpg" alt="Test 5">
-      </div>
-
-      <div class="project">
-        <div class="project-title">Test Project 6</div>
-        <img src="images/test2.jpg" alt="Test 6">
-      </div>
-
-      <div class="project">
-        <div class="project-title">Test Project 7</div>
-        <img src="images/test3.jpg" alt="Test 7">
-      </div>
-
-      <div class="project">
-        <div class="project-title">Test Project 8</div>
-        <img src="images/test4.jpg" alt="Test 8">
       </div>
     </div>
 
