--- a/index.html
+++ b/index.html
@@ -7,61 +7,53 @@
   <!-- Inter font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
 
   <!-- Header -->
   <header class="site-header">
-    <div class="header-left">
-      <a href="index.html" class="header-link">Lachlan Kain</a>
-    </div>
-
-    <div class="header-right">
-      <a href="index.html" class="header-link">Work</a>
-      <a href="info.html" class="header-link">Info</a>
-      <a href="#" class="instagram">IG</a>
-    </div>
+    <a href="index.html" class="site-title">Lachlan Kain</a>
+    <nav class="site-nav">
+      <a href="info.html">Info</a>
+    </nav>
   </header>
 
   <!-- Portfolio -->
   <main class="portfolio">
 
-    <div class="row">
-      <div class="project">
-        <div class="project-meta">
-          <span class="project-number">001</span>
-          <span class="project-name">Test Project One</span>
-        </div>
-        <img src="images/test1.jpg" alt="Test 1">
+    <div class="project">
+      <div class="project-meta">
+        <span class="project-number">001</span>
+        <span class="project-title">Test Project One</span>
       </div>
+      <img src="images/test1.jpg" alt="Test 1">
+    </div>
 
-      <div class="project">
-        <div class="project-meta">
-          <span class="project-number">002</span>
-          <span class="project-name">Test Project Two</span>
-        </div>
-        <img src="images/test2.jpg" alt="Test 2">
+    <div class="project">
+      <div class="project-meta">
+        <span class="project-number">002</span>
+        <span class="project-title">Test Project Two</span>
       </div>
+      <img src="images/test2.jpg" alt="Test 2">
+    </div>
 
-      <div class="project">
-        <div class="project-meta">
-          <span class="project-number">003</span>
-          <span class="project-name">Test Project Three</span>
-        </div>
-        <img src="images/test3.jpg" alt="Test 3">
+    <div class="project">
+      <div class="project-meta">
+        <span class="project-number">003</span>
+        <span class="project-title">Test Project Three</span>
       </div>
+      <img src="images/test3.jpg" alt="Test 3">
+    </div>
 
-      <div class="project">
-        <div class="project-meta">
-          <span class="project-number">004</span>
-          <span class="project-name">Test Project Four</span>
-        </div>
-        <img src="images/test4.jpg" alt="Test 4">
+    <div class="project">
+      <div class="project-meta">
+        <span class="project-number">004</span>
+        <span class="project-title">Test Project Four</span>
       </div>
+      <img src="images/test4.jpg" alt="Test 4">
     </div>
 
   </main>
