--- a/index.html
+++ b/index.html
@@ -7,53 +7,56 @@
   <!-- Inter font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <!-- Header -->
-  <header class="site-header">
-    <a href="index.html" class="site-title">Lachlan Kain</a>
-    <nav class="site-nav">
+  <header class="header">
+    <div class="header-left">
+      <a href="index.html">Lachlan Kain</a>
+    </div>
+    <div class="header-right">
       <a href="info.html">Info</a>
-    </nav>
+    </div>
   </header>
 
   <!-- Portfolio -->
   <main class="portfolio">
 
     <div class="project">
-      <div class="project-meta">
+      <div class="project-label">
         <span class="project-number">001</span>
-        <span class="project-title">Test Project One</span>
+        <span class="project-name">Test Project One</span>
       </div>
-      <img src="images/test1.jpg" alt="Test 1">
+      <img src="images/test1.jpg" alt="">
     </div>
 
     <div class="project">
-      <div class="project-meta">
+      <div class="project-label">
         <span class="project-number">002</span>
-        <span class="project-title">Test Project Two</span>
+        <span class="project-name">Test Project Two</span>
       </div>
-      <img src="images/test2.jpg" alt="Test 2">
+      <img src="images/test2.jpg" alt="">
     </div>
 
     <div class="project">
-      <div class="project-meta">
+      <div class="project-label">
         <span class="project-number">003</span>
-        <span class="project-title">Test Project Three</span>
+        <span class="project-name">Test Project Three</span>
       </div>
-      <img src="images/test3.jpg" alt="Test 3">
+      <img src="images/test3.jpg" alt="">
     </div>
 
     <div class="project">
-      <div class="project-meta">
+      <div class="project-label">
         <span class="project-number">004</span>
-        <span class="project-title">Test Project Four</span>
+        <span class="project-name">Test Project Four</span>
       </div>
-      <img src="images/test4.jpg" alt="Test 4">
+      <img src="images/test4.jpg" alt="">
     </div>
 
   </main>
