--- a/index.html
+++ b/index.html
@@ -1,65 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Lachlan Kain</title>
-
-  <!-- Inter font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lachlan Kain Photography</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
 </head>
-
 <body>
-
-  <!-- Header -->
-  <header class="header">
-    <div class="header-left">
-      <a href="index.html">Lachlan Kain</a>
-    </div>
-    <div class="header-right">
-      <a href="info.html">Info</a>
-    </div>
-  </header>
-
-  <!-- Portfolio -->
-  <main class="portfolio">
-
-    <div class="project">
-      <div class="project-label">
-        <span class="project-number">001</span>
-        <span class="project-name">Test Project One</span>
+  <div class="container">
+    <!-- Header -->
+    <div class="header">
+      <a href="#" class="logo">Lachlan Kain</a>
+      <div class="header-links">
+        <a href="#info" class="info-btn">Info</a>
       </div>
-      <img src="images/test1.jpg" alt="">
     </div>
 
-    <div class="project">
-      <div class="project-label">
-        <span class="project-number">002</span>
-        <span class="project-name">Test Project Two</span>
+    <!-- Gallery -->
+    <div class="gallery">
+      <div class="grid">
+        <!-- Project 1 -->
+        <div class="project">
+          <img src="images/test1.jpg" alt="Project 1">
+          <div class="project-label">
+            <span class="project-number">001</span>
+            <span class="project-title">Test Project 1</span>
+          </div>
+        </div>
+        <!-- Project 2 -->
+        <div class="project">
+          <img src="images/test2.jpg" alt="Project 2">
+          <div class="project-label">
+            <span class="project-number">002</span>
+            <span class="project-title">Test Project 2</span>
+          </div>
+        </div>
+        <!-- Project 3 -->
+        <div class="project">
+          <img src="images/test3.jpg" alt="Project 3">
+          <div class="project-label">
+            <span class="project-number">003</span>
+            <span class="project-title">Test Project 3</span>
+          </div>
+        </div>
+        <!-- Project 4 -->
+        <div class="project">
+          <img src="images/test4.jpg" alt="Project 4">
+          <div class="project-label">
+            <span class="project-number">004</span>
+            <span class="project-title">Test Project 4</span>
+          </div>
+        </div>
       </div>
-      <img src="images/test2.jpg" alt="">
     </div>
-
-    <div class="project">
-      <div class="project-label">
-        <span class="project-number">003</span>
-        <span class="project-name">Test Project Three</span>
-      </div>
-      <img src="images/test3.jpg" alt="">
-    </div>
-
-    <div class="project">
-      <div class="project-label">
-        <span class="project-number">004</span>
-        <span class="project-name">Test Project Four</span>
-      </div>
-      <img src="images/test4.jpg" alt="">
-    </div>
-
-  </main>
-
+  </div>
 </body>
 </html>
